<resources>
    <string name="app_name">eeztravel</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to">Welcome To</string>
    <string name="todo">TODO</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">forgot password</string>
    <string name="username">USERNAME</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="email">Email</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="todo2">TODO</string>
    <string name="user_signup_password" />
    <string name="signup">SIGNUP</string>

</resources>
