<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/home_11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="425dp"
            android:layout_height="247dp"
            android:contentDescription="@string/todo"
            android:gravity="center"
            app:srcCompat="@drawable/logoeeztravel" />

        <TextView
            android:id="@+id/usernameedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/username"
            android:textColor="#615E5E" />

        <EditText
            android:id="@+id/user_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/sign_password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#615E5E"
            tools:text="PASSWORD" />

        <EditText
            android:id="@+id/user_sign_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="" />


        <Button
            android:id="@+id/signbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotpasswordtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold" />


    </LinearLayout>

    <include layout="@layout/user_signup"
        android:visibility="gone"

        />

    <include layout="@layout/content_main"
                android:visibility="gone"
                />

</androidx.coordinatorlayout.widget.CoordinatorLayout>